trunk/Archive2/8c/de02bf9eb9d5a5/output
main.cpp:6:9: error: conflicting declaration 'auto A::value'
 auto A::value = 45;
         ^
main.cpp:3:16: note: previous declaration as 'int A::value'
     static int value;
                ^
main.cpp:6:9: error: declaration of 'int A::value' outside of class is not definition [-fpermissive]
 auto A::value = 45;
         ^
