trunk/Archive2/8c/de02bf9eb9d5a5/main.cpp
struct A
{
    static int value;
};

auto A::value = 45;

int main()
{
    
}